--- a/Views/userViews/landing.ejs
+++ b/Views/userViews/landing.ejs
@@ -115,6 +115,8 @@
     color: #ff8932;;
   }   
 
+
+
 	</style>
 </head>
 
@@ -298,7 +300,7 @@
 				},
 		
 				success: (response) => {
-				if (response.status) {
+				if (response.status==true) {
 					console.log('res',response.status);
 					Swal.fire({
 						title: 'Added To Cart',
@@ -317,7 +319,15 @@
 							Swal.close();
 						}
 					});
-				}
+				}else if(response.status=='outOfStock'){
+				Swal.fire({
+				  title: 'Out of Stock',
+				  icon: 'error',
+				  timer: 3000,
+				  showConfirmButton: false ,
+				  iconColor: '#ff0000'
+				})
+			  }
 				},
 				error: () => {
 					location.href = '/login';
