--- a/Views/userViews/product.ejs
+++ b/Views/userViews/product.ejs
@@ -33,6 +33,77 @@
 	<script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/sweetalert2@11.1.5/dist/sweetalert2.min.css">
 	<script src="https://cdn.jsdelivr.net/npm/sweetalert2@11.1.5/dist/sweetalert2.min.js"></script>
+
+	<style>
+		.zoom-image-container {
+			overflow: hidden;
+			position: relative;
+		}
+	
+		.zoom-image {
+			transition: transform 0.3s ease;
+			max-width: 100%;
+			display: block;
+		}
+	
+		.zoom-circle {
+			position: absolute;
+			border-radius: 50%;
+			pointer-events: none;
+			border: 2px solid #fff;
+			box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
+			transform: scale(1);
+			transition: transform 0.3s ease;
+		}
+	</style>
+	
+	<script>
+		// Function to handle the zoom effect
+		function handleZoom(event) {
+			const imageContainer = event.currentTarget;
+			const image = imageContainer.querySelector('.zoom-image');
+			const zoomCircle = imageContainer.querySelector('.zoom-circle');
+	
+			// Get the position of the mouse pointer relative to the image container
+			const rect = imageContainer.getBoundingClientRect();
+			const offsetX = event.clientX - rect.left;
+			const offsetY = event.clientY - rect.top;
+	
+			// Calculate the position of the zoom circle and set its size
+			const circleSize = 100; // Adjust this value to change the size of the zoom circle
+			const circleX = offsetX - circleSize / 2;
+			const circleY = offsetY - circleSize / 2;
+	
+			// Apply the zoom effect by changing the scale of the image and zoom circle
+			image.style.transformOrigin = `${offsetX}px ${offsetY}px`;
+			image.style.transform = 'scale(2.2)';
+	
+			zoomCircle.style.width = circleSize + 'px';
+			zoomCircle.style.height = circleSize + 'px';
+			zoomCircle.style.left = circleX + 'px';
+			zoomCircle.style.top = circleY + 'px';
+			zoomCircle.style.transform = 'scale(2)'; // Adjust this value to change the zoom circle's zoom level
+		}
+	
+		// Function to reset the zoom effect
+		function resetZoom(event) {
+			const imageContainer = event.currentTarget;
+			const image = imageContainer.querySelector('.zoom-image');
+			const zoomCircle = imageContainer.querySelector('.zoom-circle');
+	
+			image.style.transform = 'scale(1)';
+			zoomCircle.style.transform = 'scale(1)';
+		}
+	
+		// Attach event listeners to the image container
+		const imageContainers = document.querySelectorAll('.zoom-image-container');
+		imageContainers.forEach(container => {
+			container.addEventListener('mousemove', handleZoom);
+			container.addEventListener('mouseleave', resetZoom);
+		});
+	</script>
+	
+	
 </head>
 
 <body>
@@ -48,14 +119,14 @@
 			<div class="row s_product_inner">
 				<div class="col-lg-6">
 					<div class="s_Product_carousel">
-						<div class="single-prd-item">
-							<img class="img-fluid" src="/product-images/<%= product[0].image[0] %>" alt="">
+						<div class="single-prd-item zoom-image-container">
+							<img class="img-fluid zoom-image"  src="/product-images/<%= product[0].image[0] %>" alt="">
 						</div>
-						<div class="single-prd-item">
-							<img class="img-fluid" src="/product-images/<%= product[0].image[1] %>" alt="">
+						<div class="single-prd-item zoom-image-container">
+							<img class="img-fluid zoom-image" src="/product-images/<%= product[0].image[1] %>" alt="">
 						</div>
-						<div class="single-prd-item">
-							<img class="img-fluid" src="/product-images/<%= product[0].image[2] %>" alt="">
+						<div class="single-prd-item zoom-image-container">
+							<img class="img-fluid zoom-image" src="/product-images/<%= product[0].image[2] %>" alt="">
 						</div>
 					</div>
 				</div>
