--- a/Views/userViews/product.ejs
+++ b/Views/userViews/product.ejs
@@ -119,14 +119,23 @@
 			<div class="row s_product_inner">
 				<div class="col-lg-6">
 					<div class="s_Product_carousel">
-						<div class="single-prd-item zoom-image-container">
-							<img class="img-fluid zoom-image"  src="/product-images/<%= product[0].image[0] %>" alt="">
+						<div class="single-prd-item">
+							<div class="zoom-image-container">
+								<img class="img-fluid zoom-image" src="/product-images/<%= product[0].image[0] %>" alt="">
+							</div>
 						</div>
-						<div class="single-prd-item zoom-image-container">
-							<img class="img-fluid zoom-image" src="/product-images/<%= product[0].image[1] %>" alt="">
+	
+						<div class="single-prd-item">
+							<div class="zoom-image-container">
+								<img class="img-fluid zoom-image" src="/product-images/<%= product[0].image[1] %>" alt="">
+							</div>
+							
 						</div>
-						<div class="single-prd-item zoom-image-container">
-							<img class="img-fluid zoom-image" src="/product-images/<%= product[0].image[2] %>" alt="">
+						<div class="single-prd-item">
+							<div class="zoom-image-container">
+								<img class="img-fluid zoom-image" src="/product-images/<%= product[0].image[2] %>" alt="">
+							</div>
+							
 						</div>
 					</div>
 				</div>
