--- a/Views/userViews/landing.ejs
+++ b/Views/userViews/landing.ejs
@@ -227,7 +227,9 @@
 					<!-- single product -->
 					<div class="col-lg-3 col-md-6">
 						<div class="single-product">
-							<img class="img-fluid" src="../product-images/<%= item.image[0] %>" alt="">
+							<a href="/product?productId=<%= item._id %>">
+							<img class="img-fluid" src="../product-images/<%= item.image[0] %>" alt=""  >
+						</a>
 							<center>
 								<div class="product-details">
 									<h6><%= item.name %></h6>
