--- a/Views/userViews/checkout.ejs
+++ b/Views/userViews/checkout.ejs
@@ -183,7 +183,7 @@
 
                         <h3>Billing Details</h3>
     
-                        <form class="row contact_form" action="/checkout" method="post" novalidate="novalidate"
+                        <form class="row contact_form ml-0" action="/checkout" method="post" novalidate="novalidate"
                             id="checkOut-form">
     
                             <% if (address[0]) { %>
@@ -250,7 +250,7 @@
                                 </div>
                             </div>
                     </div>
-                    <div class="col-lg-4 form-group">
+                    <div class="col-lg-4 form-group ml-0">
                         <div class="order_box">
                             <h2>Your Order</h2>
     
