--- a/Views/userViews/orders.ejs
+++ b/Views/userViews/orders.ejs
@@ -69,7 +69,7 @@
         <div class="container" style="padding-left: 0;">
             <div class="row">
                 <!-- <div class="col-lg-12 posts-list"> -->
-                    <div class="comments-area col-lg-12 " style="padding-bottom: 30px; padding-left: 0; ">
+                    <div class="comments-area col-lg-12 ml-1 " style="padding-bottom: 30px; padding-left: 0; ">
                         <h4>Orders</h4>
                         <% order.forEach((item) => { %>
                             <div class="col-lg-12 col-md-12 " > <!-- Wrap each order in a responsive column div -->
