--- a/Views/userViews/checkout.ejs
+++ b/Views/userViews/checkout.ejs
@@ -155,6 +155,10 @@
         .swal2-html-container {
     color: #ffffff;;
   }   
+  .form-control{
+    width: 95%;
+
+  }
     </style>
 </head>
 
@@ -183,12 +187,12 @@
 
                         <h3>Billing Details</h3>
     
-                        <form class="row contact_form ml-0" action="/checkout" method="post" novalidate="novalidate"
+                        <form class="row contact_form ml-0" action="/checkout" method="post" novalidate="novalidate" 
                             id="checkOut-form">
     
                             <% if (address[0]) { %>
-                                <div class="col-md-6 form-group p_star">
-                                  <input type="text" class="form-control" id="first" name="fname" value="<%= address[0].address.name %>">
+                                <div class="col-md-6 form-group p_star" >
+                                  <input type="text" class="form-control" id="first" name="fname" value="<%= address[0].address.name %>" >
                                 </div>
                               
                                 <div class="col-md-6 form-group p_star">
