--- a/Public/css/bootstrap.css
+++ b/Public/css/bootstrap.css
@@ -1906,9 +1906,9 @@ pre code {
 
 .form-control {
     display: block;
-    width: 100%;
+    width: 95%;
     height: calc(2.25rem + 2px);
-    padding: .375rem .75rem;
+    padding: 0.375rem -0.25rem;
     font-size: 1rem;
     line-height: 1.5;
     color: #495057;
@@ -5679,7 +5679,7 @@ button.close {
     -ms-flex-pack: justify;
     justify-content: space-between;
     padding: 1rem;
-    border-bottom: 1px solid #e9ecef;
+    border-bottom: 3px solid #d2841e;
     border-top-left-radius: .3rem;
     border-top-right-radius: .3rem
 }
@@ -5709,7 +5709,7 @@ button.close {
     -ms-flex-pack: end;
     justify-content: flex-end;
     padding: 1rem;
-    border-top: 1px solid #e9ecef
+    border-top: 0px solid #e9ecef;
 }
 
 .modal-footer>:not(:first-child) {
