--- a/Public/css/main.css
+++ b/Public/css/main.css
@@ -6082,7 +6082,7 @@ article .posts .tile .inner {
   background-color: white;
   cursor: pointer;
   transition: box-shadow 0.25s;
-  text-align: center; 
+  text-align: center;
 }
 
 
@@ -6178,3 +6178,18 @@ article .posts .tile .inner:hover h4 {
   .swal2-html-container {
     color: #ff8932;;
   }    
+
+
+  ::-webkit-scrollbar {
+    height: 5px;
+    width: 5px;
+  }
+  
+  ::-webkit-scrollbar-track {
+    box-shadow: inset 0 0 6px #21233f;
+  }
+  
+  ::-webkit-scrollbar-thumb {
+    background-color: #676767;
+    border-radius: 10px;
+  }
