--- a/Views/userViews/profile.ejs
+++ b/Views/userViews/profile.ejs
@@ -91,7 +91,7 @@
         }
 
         .wallet-top .card {
-            background-image: linear-gradient(326deg, #33353f 41%, #fff 149%);
+            background-image: linear-gradient(326deg, #1e1f25 27%, #fff 267%);
             width: 100%;
             height: 250px;
             box-shadow: 15px 15px 27px -13px #FFFEFF;
@@ -177,10 +177,10 @@
                                 </div>
                                 <br>
                                 <div class="col-xs-12">
-                                    <div class="col-md-lg-6 posts">
-                                        <div class="col-xs-12 col-lg-12 col-xl-6 tile">
+                                    <div class="col-md-lg-6 posts ">
+                                        <div class="col-xs-12 col-lg-12 col-xl-6 tile ">
                                             <center>
-                                                <div class="inner">
+                                                <div class="inner" style="width: 95%;" >
                                                     <a href="/editProfile" class="d-flex justify-content-between">
                                                         <h4>Edit Profile</h4>
                                                     </a>
@@ -189,7 +189,7 @@
                                         </div>
                                         <div class="col-xs-12 col-lg-12 col-xl-6 tile">
                                             <center>
-                                                <div class="inner">
+                                                <div class="inner" style="width: 95%;">
                                                     <a href="/order" class="d-flex justify-content-between">
                                                         <h4>Your Orders</h4>
                                                     </a>
@@ -197,15 +197,27 @@
                                             </center>
                                         </div>
                                         <div class="col-xs-12 col-lg-12 col-xl-6 tile">
-                                            <div class="inner">
-                                                <a href="/setNewPassword" class="d-flex justify-content-between">
-                                                    <h4>Change Password</h4>
-                                                </a>
-                                            </div>
+                                            <center>
+                                                <div class="inner" style="width: 95%;">
+                                                    <a href="/wallet" class="d-flex justify-content-between">
+                                                        <h4>Your Wallet</h4>
+                                                    </a>
+                                                </div>
+                                            </center>
                                         </div>
                                         <div class="col-xs-12 col-lg-12 col-xl-6 tile">
                                             <center>
-                                                <div class="inner">
+                                                <div class="inner" style="width: 95%;">
+                                                    <a href="/setNewPassword" class="d-flex justify-content-between">
+                                                        <h4>Change Password</h4>
+                                                    </a>
+                                                </div>
+                                            </center>
+                                        </div>
+                                    
+                                        <div class="col-xs-12 col-lg-12 col-xl-6 tile">
+                                            <center>
+                                                <div class="inner" style="width: 95%;">
                                                     <a href="/userAddress" class="d-flex justify-content-between">
                                                         <h4>Your Address</h4>
                                                     </a>
