--- a/Views/adminViews/updateProduct.ejs
+++ b/Views/adminViews/updateProduct.ejs
@@ -56,7 +56,7 @@
                 </div>
                 <div class="form-group">
                   <label for="exampleInputEmail3">Quantity</label>
-                  <input type="number" class="form-control" id="stock" placeholder="Quantity" name="stock" onkeyup="stockValidation()" >
+                  <input type="number" class="form-control" id="stock" placeholder="Quantity" name="stock" value="<%= product.stock %>"  onkeyup="stockValidation()" >
                   <span id="stock-error" class="validation-label"></span>
                 </div>
                 <br>
