--- a/Views/userViews/landing.ejs
+++ b/Views/userViews/landing.ejs
@@ -134,7 +134,7 @@
 			  <% banners.forEach((banner, index) => { %>
 			  <div class="carousel-item <%= index === 0 ? 'active' : '' %>">
 				<div class="row align-items-center d-flex  ml-3 mt-5">
-				  <div class="col-lg-5 col-md-6">
+				  <div class="col-lg-5 col-md-6 mt-5">
 					<div class="banner-content">
 					  <h1><%= banner.title %></h1>
 					  <br>
