--- a/Views/userViews/landing.ejs
+++ b/Views/userViews/landing.ejs
@@ -166,7 +166,7 @@
 
 	<section class="brand-area   section_gap	" style="width: 100%;">
 		<div class="container" >
-			<div class="row features-inner " style="padding-left: 30px; padding-right: 30px;" >
+			<div class="row features-inner " style="padding-left: 30px; padding-right: 30px; margin-left: 0px;" >
 				<a class="col single-img" href="#">
 					<img class="img-fluid d-block mx-auto" src="img/brand/1.png" alt="">
 				</a>
@@ -206,11 +206,11 @@
 	<!-- End category Area -->
 
 	<!-- start product Area -->
-	<section class=" owl-stage-outer section_gap">
+	<section class=" owl-stage-outer section_gap" >
 	<!-- single product slide -->
 	<div >
 		<div class="container" >
-			<div class="row justify-content-center">
+			<div class="row justify-content-center"  style="margin-left: 0px;">
 				<div class="col-lg-8 text-center">
 					<div class="section-title">
 						<h1>Latest Products</h1>
@@ -222,7 +222,7 @@
 					</div>
 				</div>
 			</div>
-			<div class="row">
+			<div class="row"  style="margin-left: 0px;">
 				<% product.forEach(function(item) { %>
 					<!-- single product -->
 					<div class="col-lg-3 col-md-6">
