added demo user details

--- a/Views/userViews/login.ejs
+++ b/Views/userViews/login.ejs
@@ -75,6 +75,12 @@
 								<a href="/forgotPasswordNum">Forgot Password?</a>
 							</div>
 						</form>
+						<div   style="flex: 0 0 100%;
+						max-width: 100%; ">
+							<h3 style="margin-bottom: 5px; margin-top: 20px;">Demo User</h3>
+							<p  style="margin-bottom: 0;">email: newuser@g.com</p>
+							<p  style="margin-bottom: 0;">password: qqqqqq1!Q</p>
+						</div>
 					</div>
 				</div>
 			</div>
